syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel );
	rpc CreateCustomer (CreateCustomerResponse) returns (stream CustomerModel);
}

//DO YOU NEED SPECIFIED WHAT IS THE "int" (int32, int64, ...)
message CustomerLookupModel{
	int32 userId = 1;
}

message CreateCustomerResponse{

}

message CustomerModel{
	string firstName = 1;
	string lastName = 2;
	string emailAddress= 3;
	bool isAlive = 4;
	int32 age = 5;
}